--- a/includes/navBar.css
+++ b/includes/navBar.css
@@ -27,7 +27,7 @@
   padding: 0;
   border: 0;
   line-height: 2;
-  font-family: 'trashim_clmbold', 'DJB Jenna',arial;
+  font-family: 'trashim_clmbold', 'DJB Jenna';
 }
 #cssmenu {
 
