--- a/includes/style.css
+++ b/includes/style.css
@@ -610,3 +610,7 @@ h2                  { position: absolute; top: 200px; left: 0; width: 100%; }
 h2 span             { color: white; font: bold 24px/45px Helvetica, Sans-Serif; letter-spacing: -1px;  
                       background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.7); padding: 10px; }
 h2 span.spacer      { padding: 0 2px; background: none; }
+
+.placeImage{
+    /** some attributes */
+}
