--- a/includes/style.css
+++ b/includes/style.css
@@ -552,6 +552,17 @@ input{
 	margin-right:100px;
 }
 
+.formFilter{
+	display: block;
+	position: absolute;
+	float:right;
+	padding: 5px;
+	margin-right:50px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px; 
+	margin-right:100px;
+}
+
 textarea{
 	height:100px;
 	width:158px;
