--- a/includes/style.css
+++ b/includes/style.css
@@ -537,7 +537,7 @@ input{
 
 /*add Place*/
 .placeForm{
-	width:700px;
+	width:1000px;
 	float:right;
 	line-height: 40px;
 	position:absolute;
@@ -548,6 +548,15 @@ input{
 	margin-right: 30px;
 }
 
+#fileDisplayArea img {
+    border-radius: 5px;
+    border: 5px solid white;
+    margin-top: 10px;
+    width: 166px;
+    position: absolute;
+    left: 0;
+    bottom: 72px;
+}
 .placeForm select{
 	background: #FFFFFF;
 	color: #000000;
@@ -559,12 +568,14 @@ input{
 	-webkit-border-radius: 5px;
 	border-radius: 5px; 
 	margin-right:100px;
+	color:#000000;
 
 }
 
 .placeForm input,
 .placeForm select,
-.placeForm textarea{
+.placeForm textarea,
+input.addBtn{
 	width: 175px;
     box-sizing: border-box;
     margin-right:0;
@@ -572,16 +583,29 @@ input{
 
 .placeForm textarea{
 	height:100px;
-	width:158px;
 	padding: 5px;
 	margin-top:5px;
 	background: #FFFFFF; 
-	-webkit-border-radius: 5px;
 	border-radius: 5px; 
 }
 
-.placeForm p{
+.placeForm > form > div > div {
 	margin-top:30px;
+}
+
+.leftSideForm > div:first-child {
+height: 108px;
+}
+
+.rightSideForm{
+	float:right;
+	width:400px;
+}
+
+.leftSideForm{
+	float:right;
+	width:500px;
+	position: relative;
 }
 
 .formFilter{
@@ -605,24 +629,10 @@ input{
 	width: 200px;
 }
 
-.photoUp{
-	position: relative;
-	float: left;
-	margin: -451px 0 0 240px;
-}
 
-#upload{
-	position: relative;
-	float: left;
-	margin: -443px 0 0 0;
-	width: 200px;
-	height: 188px;	
-}
-
-.addBtn {
+input.addBtn {
 	float:right;
-	margin-right:700px;
-	margin-top:-1600px;
+	margin-top: 10px;
 	-moz-box-shadow:inset 0px 1px 0px 0px #fff6af;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #fff6af;
 	box-shadow:inset 0px 1px 0px 0px #fff6af;
