--- a/includes/style.css
+++ b/includes/style.css
@@ -16,8 +16,7 @@
     font-style: normal;
 }
 
-*
-{
+*{
  padding:0px;
  margin:0px;
 }
@@ -62,22 +61,6 @@ a{
 }
 */
 
-
-/*
-.submit{
-	background-image: url('../images/hearts_bg.jpg'); 
-	background-size: 30px;
-	 background-repeat: repeat;
-	 border: 2px solid;
-    border-radius: 25px;
-}
-
-#imgGroup{
-	margin-top: 60px;
-	
-}
-*/
-
 #wrapper{
  direction: rtl;
  margin: 0px auto;
@@ -96,6 +79,7 @@ main{
 }
 
 
+/*homepage- main */
 .filter{
 	height:30px;
 	width:60px;
@@ -130,120 +114,6 @@ select {
     border-radius: 5px;
     outline: none;
 }	
-
-
-/*
-
-section{
-	width:190px;
-	height:138px;
-	float: left;
-}
-
-.center{
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-#aboutus{
-	font-size: 20px;
-	margin-top: 40px;
-	margin-right: 30px;
-	padding: 10px;
-}
-
-#hottest{
-	position: relative;
-    background: url(../images/hottest.jpg);
-    width: 437px;
-    height: 657px;
-    background-repeat: no-repeat;
-    float:left;
-    margin-top: 50px;
-    margin-left: 35px;
-}
-#castro{
-	position: relative;
-    background: url("../images/castro.jpg");
-    width: 506px;
-    height: 339px;
-    background-repeat: no-repeat;
-    float:left;
-    margin-top: 50px;
-}
-#myjeans{
-	position: relative;
-    background: url("../images/myjeans.jpg");
-    width: 264px;
-    height: 691px;
-    background-repeat: no-repeat;
-    float:left;
-}
-#dganit{
-	position: relative;
-    background: url("../images/dganit.jpg");
-    width: 242px;
-    height: 288px;
-    background-repeat: no-repeat;
-    float:left;
-}
-#tip{
-	float: right;
-	clear: both;
-	width: 240px;
-	margin-top:30px;
-	margin-right: 30px;
-}
-#signup{
-	float: left;
-	clear:both;
-	padding: 50px;
-}
-#signup input{
-	font-size: 30px;
-	padding:10px;
-	margin-top: 30px;
-	direction: ltr;
-}
- .bottomleftHeadline {
-    position: absolute;
-    bottom: 150px;
-    width: 100%;
-    font-weight: bold;
-    color: #000000;
-    font-size: 20px;
-    default fallback 
-	background: rgb(255, 255, 255) transparent;
-	 nice browsers 
-	background: rgba(255, 255, 255, 0.5);
-	text-align: center;
-  }
-.bottomleftSecondHeadline{
-  	font-size: 15px;
-  }
-  #bottomleftHeadline1{
-  	 bottom: 50px; 
-  	 }
-  
-#bottomleftHeadline2{
-  	 bottom: 30px;
-}
- 
-#newsInStyle{
-  	margin-right:30px;
-}
-  
-input[type=submit] {
-	padding:5px 15px; 
-	background:#FFC0CB;
-	color: #FFFFFF; 
-    cursor:pointer;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    font-size: 15px;
-}
-*/
-
 
 
 
@@ -407,7 +277,7 @@ input{
 
 
 #target img {
-	width: 100%;
+	width:100%;
 }
 	/*
 	.indexPlacesPic3, .indexPlacesPic4, .indexPlacesPic5{
@@ -444,7 +314,6 @@ input{
 	text-align: center;
  }
 
-
 .indexAside{
 	float:left;
 	display:block;
@@ -467,74 +336,6 @@ input{
 	color: #FAFBF6;
 	margin-top: -25px;
 }
-
-
-
-/*
-.formAdd{
-	float: right;
-	margin-top:80px;
-	width: 300px;
-	height:2000px;;
-	text-align: right;
-	line-height: 150%;
-	direction: rtl;
-	float: right;
-}
-
-
-.aFooter{
-	 float: left;
-	 text-decoration: none;
-	 color: #000000;
-	 font-weight: bold;
-	 margin-left: 10px;
-	 font-size: 12px;
-	 padding-top: 5px;
-	 position: relative;
-	 left: 350px;
-}
-
-.aFooter:hover{
-	color: #f5278d;
-}
-.inputCheckbox{
-	float: right;
-	margin-left: 10px;
-	margin-bottom: 0px;
-}
-
-.inputRadio{
-	float: right;
-	margin-left: 10px;
-	margin-bottom: 0px;
-}
-#styleImage{
-	float: left;
-	left: 10%;
-	position: relative;
-}
-#chatButton{
-	width: 100px;
-	margin-top: 10px;
-}
-#album{
-	clear:both;
-}
-.albumImg{
-	max-height: 400px;
-	margin: 10px;
-}
-.styleDiv{
-	margin: 10px;
-	float: right;
-}
-.stylyistsImage{
-}
-input{
-	margin-bottom: 15px;
-}
-*/
 
 
 /*add Place*/
@@ -678,39 +479,56 @@ input.addBtn {
 	
 }
 
+
+/* Place Page */
+
+#placeTarget{
+	color: #FFFFFF;
+	float:right;
+	width:100%;
+}
+
+#placePageName{
+	display:inline-block;
+	margin-right: 400px;
+    margin-top:50px; 
+}
+
+#placePageType{
+	display: inline-block;
+}
+
+#placePagePic{
+	margin-right:30px;
+	margin-top:30px;
+	height: 294px;
+	width: 260px;
+}
+
+#placePagePic{
+	width 100%;
+}
+
+#description{
+    position: absolute;
+    margin-right: 338px;
+    top: 347px;
+	width: 200px;
+	float:right;
+}
+
+
 .clear
 {
  clear:both;
 }
 
-/*.description{
-	background-color:yellow;
-}
-
-
-
-.hOverPics{
-	position:relative;
-	background-color:yellow;
-	width:200px;
-	height:40px;
-	margin-top:30px;
-	color:#FFFFFF;
-	margin-right:50px;
-	border:#000000;
-}
-
-
-#image2              { position: relative; margin-bottom: 20px; width: 100%; }
-#image3              { position: relative; margin-bottom: 20px; width: 100%; }
-#image4              { position: relative; margin-bottom: 20px; width: 100%; }
-#image5              { position: relative; margin-bottom: 20px; width: 100%; }
-*/
-
+/*
 h2                  { position: absolute; top: 200px; left: 0; width: 100%; }
 h2 span             { color: white; font: bold 24px/45px Helvetica, Sans-Serif; letter-spacing: -1px;  
                       background: rgb(0, 0, 0); background: rgba(0, 0, 0, 0.7); padding: 10px; }
 h2 span.spacer      { padding: 0 2px; background: none; }
+*/
 .fil{
     float: right;
     size: 30px;
