--- a/includes/style.css
+++ b/includes/style.css
@@ -517,6 +517,26 @@ input.addBtn {
 	float:right;
 }
 
+#commentArea{
+	color: #FFFFFF;
+	float:right;
+	width:100%;
+	display:block;
+	margin-top:200px;
+}
+
+#commentInput{
+	top:300px;
+}
+
+.checkInBTN {
+    float: left;
+     margin-top: 40px;
+    margin-left: 86px;
+    background-image: url('/images/checkin.jpg');
+    height: 35px;
+    width: 103px;
+}
 
 .clear
 {
