--- a/includes/style.css
+++ b/includes/style.css
@@ -363,7 +363,14 @@ input{
 	border-radius: 5px; 
 	margin-right:100px;
 	color:#000000;
+}
 
+.tagsClass{
+	float:right;
+	height:200px;
+	width:300px;
+	background-color:#0086B3
+	color:#FFFFFF;
 }
 
 .placeForm input,
