--- a/includes/tagsStyle.css
+++ b/includes/tagsStyle.css
@@ -1,187 +1,134 @@
-<a href="#" class="myButton">purple</a>
+@font-face {
+    font-family: 'trashim_clmbold';
+    src: url('trashimclm-bold-webfont.eot');
+    src: url('trashimclm-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('trashimclm-bold-webfont.woff') format('woff'),
+         url('trashimclm-bold-webfont.ttf') format('truetype'),
+         url('trashimclm-bold-webfont.svg#trashim_clmbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #efdcfb;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #efdcfb;
+
+
+/* מגניב רצח */
+#rxCTZuwnfH{
 	box-shadow:inset 0px 1px 0px 0px #efdcfb;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfbdfa), color-stop(1, #bc80ea));
-	background:-moz-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-webkit-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-o-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
-	background:-ms-linear-gradient(top, #dfbdfa 5%, #bc80ea 100%);
 	background:linear-gradient(to bottom, #dfbdfa 5%, #bc80ea 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfbdfa', endColorstr='#bc80ea',GradientType=0);
 	background-color:#dfbdfa;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
 	border-radius:6px;
 	border:1px solid #c584f3;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #9752cc;
 }
-.myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bc80ea), color-stop(1, #dfbdfa));
-	background:-moz-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
-	background:-webkit-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
-	background:-o-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
-	background:-ms-linear-gradient(top, #bc80ea 5%, #dfbdfa 100%);
+
+
+#rxCTZuwnfH:hover {
 	background:linear-gradient(to bottom, #bc80ea 5%, #dfbdfa 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bc80ea', endColorstr='#dfbdfa',GradientType=0);
 	background-color:#bc80ea;
 }
-.myButton:active {
+
+#rxCTZuwnfH:active {
 	position:relative;
 	top:1px;
 }
 
 
-----------------------------------------------------------------------------------------------------------------------------------------------
-
-<a href="#" class="myButton">light red</a>
-
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #f7c5c0;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #f7c5c0;
+/* אחלה מוזיקה*/
+#HdXKkubkuY {
 	box-shadow:inset 0px 1px 0px 0px #f7c5c0;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fc8d83), color-stop(1, #e4685d));
-	background:-moz-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
-	background:-webkit-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
-	background:-o-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
-	background:-ms-linear-gradient(top, #fc8d83 5%, #e4685d 100%);
 	background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fc8d83', endColorstr='#e4685d',GradientType=0);
 	background-color:#fc8d83;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
 	border-radius:6px;
 	border:1px solid #d83526;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family::'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #b23e35;
 }
-.myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e4685d), color-stop(1, #fc8d83));
-	background:-moz-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
-	background:-webkit-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
-	background:-o-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
-	background:-ms-linear-gradient(top, #e4685d 5%, #fc8d83 100%);
-	background:linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e4685d', endColorstr='#fc8d83',GradientType=0);
+
+#HdXKkubkuY:hover {
+    background: linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
 	background-color:#e4685d;
 }
-.myButton:active {
+
+#HdXKkubkuY:active {
 	position:relative;
 	top:1px;
 }
 
--------------------------------------------------------------------------------------------------------------------------------------------
-
-<a href="#" class="myButton">orange</a>
-
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #fff6af;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #fff6af;
+/* צהוב */
+ {
 	box-shadow:inset 0px 1px 0px 0px #fff6af;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
-	background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-	background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
 	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
 	background-color:#ffec64;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
 	border-radius:6px;
 	border:1px solid #ffaa22;
 	display:inline-block;
 	cursor:pointer;
 	color:#333333;
-	font-family:Arial;
+	font-family::'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
+
 .myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
-	background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-o-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-	background:-ms-linear-gradient(top, #ffab23 5%, #ffec64 100%);
 	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
 	background-color:#ffab23;
 }
+
 .myButton:active {
 	position:relative;
 	top:1px;
 }
 
-=============================================================================================================================================
 
-<a href="#" class="myButton">green</a>
 
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #a4e271;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #a4e271;
+/* מעשנים*/
+#EIZhxy7kbM {
 	box-shadow:inset 0px 1px 0px 0px #a4e271;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #89c403), color-stop(1, #77a809));
-	background:-moz-linear-gradient(top, #89c403 5%, #77a809 100%);
-	background:-webkit-linear-gradient(top, #89c403 5%, #77a809 100%);
-	background:-o-linear-gradient(top, #89c403 5%, #77a809 100%);
-	background:-ms-linear-gradient(top, #89c403 5%, #77a809 100%);
 	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#89c403', endColorstr='#77a809',GradientType=0);
 	background-color:#89c403;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
 	border-radius:6px;
 	border:1px solid #74b807;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #528009;
 }
-.myButton:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
-	background:-moz-linear-gradient(top, #77a809 5%, #89c403 100%);
-	background:-webkit-linear-gradient(top, #77a809 5%, #89c403 100%);
-	background:-o-linear-gradient(top, #77a809 5%, #89c403 100%);
-	background:-ms-linear-gradient(top, #77a809 5%, #89c403 100%);
+
+#EIZhxy7kbM:hover {
 	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77a809', endColorstr='#89c403',GradientType=0);
 	background-color:#77a809;
 }
-.myButton:active {
+
+#EIZhxy7kbM:active {
 	position:relative;
 	top:1px;
 }
 
----------------------------------------------------------------------------------------------------------------------------------------------
-
-<a href="#" class="myButton">purple</a>
-
-.myButton {
+/* לא מעשנים*/
+ {
 	-moz-box-shadow:inset 0px 1px 0px 0px #e184f3;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #e184f3;
 	box-shadow:inset 0px 1px 0px 0px #e184f3;
@@ -200,7 +147,7 @@
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
@@ -222,19 +169,10 @@
 	top:1px;
 }
 
----------------------------------------------------------------------------------------------------------------------------------------------
+/**/
 
-<a href="#" class="myButton">pink</a>
-
-.myButton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #fbafe3;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #fbafe3;
+#3ly7QMzbIh {
 	box-shadow:inset 0px 1px 0px 0px #fbafe3;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ff5bb0), color-stop(1, #ef027d));
-	background:-moz-linear-gradient(top, #ff5bb0 5%, #ef027d 100%);
-	background:-webkit-linear-gradient(top, #ff5bb0 5%, #ef027d 100%);
-	background:-o-linear-gradient(top, #ff5bb0 5%, #ef027d 100%);
-	background:-ms-linear-gradient(top, #ff5bb0 5%, #ef027d 100%);
 	background:linear-gradient(to bottom, #ff5bb0 5%, #ef027d 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bb0', endColorstr='#ef027d',GradientType=0);
 	background-color:#ff5bb0;
@@ -245,7 +183,7 @@
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
@@ -290,7 +228,7 @@
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
@@ -336,7 +274,7 @@
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family:Arial;
+	font-family:'trashim_clmbold', Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
