--- a/includes/style.css
+++ b/includes/style.css
@@ -26,7 +26,7 @@ header,section,aside,footer,a,nav{
 }
 
 body{
-	font-family: 'trashim_clmbold';
+	font-family: 'trashim_clmbold', Arial;
 	width:100%;
 	background-image: url(../images/background.jpg);
 }
@@ -353,6 +353,10 @@ input{
 	color:#000000;
 }
 
+#tags{
+	margin-top: 100px;
+}
+
 .tagsClass{
     float: right;
     height: 12px;
@@ -507,6 +511,9 @@ input.addBtn {
 	float:right;
 }
 
+#tags span{
+	padding-right: 13px;
+}
 #commentArea{
 	color: #FFFFFF;
 	float:right;
@@ -519,14 +526,37 @@ input.addBtn {
 	top:300px;
 }
 
+
 .checkInBTN {
-    float: left;
-    margin-top: 100px;
-    margin-left: 86px;
-    background-image: url(../images/checkin.jpg);
-    height: 30px;
-    width: 100px;
+	float: left;
+	margin-top: 26px;
+	font-family: 'DJB Jenna';
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	background-color:#ededed;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#777777;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
 }
+
+.ImHere:hover {
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	background-color:#dfdfdf;
+
+}
+.ImHere {
+	position:relative;
+	top:1px;
+}
+
 
 .clear
 {
@@ -544,4 +574,16 @@ h2 span.spacer      { padding: 0 2px; background: none; }
     size: 30px;
     padding: 5px;
     margin: 10px;
+    font-family: 'trashim_clmbold', Arial;
+}
+
+#chooseTag{
+    float: right;
+    display: block;
+    padding: 5px;
+    margin-top: 60px;
+    font-weight: bold;
+    font-family: 'trashim_clmbold', Arial;
+    font-size: 20px;
+    margin-right: -259px;
 }
