--- a/includes/style.css
+++ b/includes/style.css
@@ -616,12 +616,13 @@ input.addBtn {
     left:2px;
 }
 
-.currentRating{
-	float:left;
-	margin: 11px 0 0 159px;
-	color:#DB9A02;
-	font-size:15px;
-	font-family: 'trashim_clmbold', Arial;
+.currentRating {
+    float: left;
+    margin: 10px 0 0 139px;
+    font-weight: bold;
+    color: #DB9A02;
+    font-size: 19px;
+    font-family: 'trashim_clmbold', Arial;
 }
 
 .fb-like{
