--- a/includes/style.css
+++ b/includes/style.css
@@ -824,3 +824,66 @@ input.addBtn {
  	margin-top:30px;
  }
  
+ /* scoreBoard */
+
+.Top5{
+	text-align: center;
+	margin-top: 60px;
+}
+
+.userClass{
+	float: right;
+	width: 14%;
+	margin-right: 5%;
+	margin-top: 60px;
+}
+
+.orange{
+	color: #DB9A02;
+    margin-top: 85px;
+    margin-right: 49px;
+}
+
+.link {
+  background: #2e2e29;
+  background-image: -moz-linear-gradient(top, #2e2e29, #69624f);
+  background-image: -ms-linear-gradient(top, #2e2e29, #69624f);
+  background-image: -o-linear-gradient(top, #2e2e29, #69624f);
+  background-image: linear-gradient(to bottom, #2e2e29, #69624f);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;d
+  border-radius: 28px;
+  font-family: Arial;
+  color: #f7ec18;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin-right:20px;
+  float:right;
+}
+
+.link:hover {
+  background: #a8a8a8;
+  background-image: -moz-linear-gradient(top, #a8a8a8, #9c9c9c);
+  background-image: -ms-linear-gradient(top, #a8a8a8, #9c9c9c);
+  background-image: -o-linear-gradient(top, #a8a8a8, #9c9c9c);
+  background-image: linear-gradient(to bottom, #a8a8a8, #9c9c9c);
+  text-decoration: none;
+}
+
+.linksToAddPoints{
+    float: right;
+    margin-top: 20px;
+    margin-right:5%;
+    width:95%;
+}
+
+.line{
+	width:100%;
+	height:60px;
+}
+.links{
+	height:15px;
+	float:right;
+	margin:15px;
+}
