--- a/includes/style.css
+++ b/includes/style.css
@@ -51,22 +51,11 @@ a{
 	margin-top:10px;
 }
 
-#user{
-	width:100px;
-	height: 100px;
-	float:left;
-}
-
-#myProfile{
-	height:100%;
-}
-
-
 .logout {
     float: left;
     border-radius: 4px;
     border: none;
-    margin: 130px 0 0 22px;
+    margin: 2px 0 0 2px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
@@ -93,6 +82,14 @@ main{
 	padding-right:20px;
 	margin-top:10px;	
 }
+
+
+#helloUser {
+    float: left;
+    margin-left: 0px;
+    margin-top: 81px;
+}
+
 
 h1{
 	direction: rtl;
