--- a/includes/style.css
+++ b/includes/style.css
@@ -55,7 +55,7 @@ a{
     float: left;
     border-radius: 4px;
     border: none;
-    margin: 2px 0 0 2px;
+    margin: 2px 0px 0 2px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
