--- a/includes/style.css
+++ b/includes/style.css
@@ -61,7 +61,15 @@ a{
     background-image: url(../images/logout.jpg);
 }
 
-
+.logout2{
+	float: left;
+    border-radius: 4px;
+    border: none;
+    margin: 22 0px 0 -112px;
+    height: 21px;
+    width: 72px;
+    background-image: url(../images/logout.jpg);
+}
 header{
  width:1000px;
  height:100px;
