--- a/includes/style.css
+++ b/includes/style.css
@@ -311,12 +311,12 @@ text-align: center;
     float: left;
     display: block;
     margin-left: 30px;
-    margin-top: 82px;
+    margin-top: 97px;
     border-style: solid;
     border-color: #FAFBF6;
     font-family: 'trashim_clmbold',Arial;
     border-width: 1px;
-    height: 460px;
+    height: 446px;
     width: 250px;
 }
 
@@ -928,8 +928,41 @@ input.addBtn {
 	width:100%;
 	height:60px;
 }
+
 .links{
 	height:15px;
 	float:right;
 	margin:15px;
 }
+
+.orange2{
+	margin-top: 65px;
+	margin-right: 150px;
+}
+
+.stats{
+    float: right;
+    margin-right: 30px;
+    margin-top: 47px;
+}
+
+.stats > p{
+	float:right;
+	margin-right: 30px;
+	margin-top: 20px;
+	font-size:20px;
+}
+
+.status2{
+	color:#FF235A;
+}
+
+.status3{
+	color:#4CFF67;
+}
+
+.status4{
+	color:#C425FF;
+}
+
+
